Fix button spacing on home page in mobile view

--- a/src/Pages/HomeDashboard/HomeDashboard.less
+++ b/src/Pages/HomeDashboard/HomeDashboard.less
@@ -21,6 +21,10 @@
 
 			.button {
 				margin-bottom: 0;
+
+				@media @smartphones {
+					margin-bottom: @spacing-small;
+				}
 			}
 		}
 	}
